--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=Nakasendo
 spring.datasource.password=MySQL@123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+server.error.include-message=always
+server.error.include-binding-errors=always
