gestion de l'autenthification, de l'ordre des pages, de la deconnexion + ajout de qques tests mais a reverifier et a reajuster + cryptage des mdp + ajout de toute la securite avec spring security

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+<!--
+        il est important de respecter l'ordre pour les dépendances de sécurité. Principe de
+        la hierarchie de dépendances
+-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -93,15 +105,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
-
-
-
-        <!--        <dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-security</artifactId>
-                </dependency>-->
     </dependencies>
 
     <build>
