--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.jpa.show-sql = true
